# pos

./: .gitignore  Makefile.am  configure.ac
src/: pos.c++
src/kernel/: address_space.c++  address_space.h++  elf.c++  elf.h++  files.c++  files.h++  thread.c++  thread.h++
test/: auxv.c  nano_false.S  nano_hlt.S  nano_true.S  nanotls_false-testval.c  nanotls_false.c  nanotls_true-testval.c  nanotls_true.c  uname.c
test/pos/: auxv.bash  help.bash  nano_false.bash  nano_hlt.bash  nano_true.bash  nanotls_false.bash  nanotls_true.bash  noargs.bash  static_auxv.bash  static_true.bash  static_uname.bash  true.bash  uname.bash
